# youngs75_coding_ai_agent

./: .cli_history  .dockerignore  .env.example  .gitignore  AGENTS.md  AI_CODING_AGENT_HARESS_REQUIREMENTS.md  CODING_AGENT_DESIGN.md  DeepAgents_Middleware_Analysis.md  Makefile  README.md  REPORT.md  __init__.py  pyproject.toml  youngs75-agent.sh
.ai/: review_plan_2026-04-09.md
.ai/analysis/: claude-code-and-codex-analysis.md
.ai/memory/: procedural.jsonl  semantic.jsonl
.ai/sessions/: session-2026-04-03-0001.md  session-2026-04-03-0002.md  session-2026-04-03-0003.md  session-2026-04-04-0001.md  session-2026-04-04-0002.md  session-2026-04-04-0003.md  session-2026-04-04-0004.md  session-2026-04-04-0005.md  session-2026-04-04-0006.md  session-2026-04-04-0007.md  session-2026-04-04-0008.md  session-2026-04-05-0001.md  session-2026-04-05-0002.md  session-2026-04-05-0003.md  session-2026-04-05-0004.md  session-2026-04-05-0005.md  session-2026-04-05-0006.md  session-2026-04-05-0007.md  session-2026-04-05-0008.md  session-2026-04-06-0001.md  session-2026-04-06-0002.md  session-2026-04-07-0001.md  session-2026-04-07-0002.md  session-2026-04-07-0003.md  session-2026-04-07-0004.md  session-2026-04-07-0005.md  session-2026-04-07-0006.md  session-2026-04-07-0007.md  session-2026-04-08-0001.md  session-2026-04-08-0002.md  session-2026-04-08-0003.md  session-2026-04-08-0004.md  session-2026-04-08-0005.md  session-2026-04-09-0001.md  session-2026-04-09-0002.md  session-2026-04-09-0003.md  session-2026-04-09-0004.md  session-2026-04-09-0005.md  session-2026-04-09-0006.md  session-2026-04-09-0007.md  (+8 more)
.github/workflows/: cd.yml  ci.yml
a2a/: __init__.py  executor.py  server.py
a2a_local/: discovery.py  executor.py  resilience.py  router.py  streaming.py
agents/: __init__.py  echo_agent.py
agents/coding_assistant/: __init__.py  agent.py  config.py  prompts.py  schemas.py
agents/deep_research/: agent.py  agent_a2a.py  config.py  prompts.py  schemas.py
agents/orchestrator/: __init__.py  agent.py  config.py  coordinator.py  schemas.py  task_graph.py
agents/planner/: __init__.py  agent.py  config.py  prompts.py  schemas.py
agents/simple_react/: agent.py  config.py
agents/verifier/: agent.py  config.py  prompts.py  schemas.py
cli/: __main__.py  app.py  commands.py  config.py  eval_runner.py  renderer.py  session.py
coding_agent/a2a/: AGENTS.md  __init__.py  discovery.py  executor.py  resilience.py  router.py  server.py  streaming.py
coding_agent/agents/: AGENTS.md
coding_agent/cli/: AGENTS.md  __init__.py  app.py  commands.py  eval_runner.py  renderer.py
coding_agent/core/: AGENTS.md  __init__.py  abort_controller.py  builtin_hooks.py  config.py  db_config.py  exceptions.py  hooks.py  model_tiers.py  parallel_tool_executor.py  resilience.py  stall_detector.py  subagent_context.py  tool_call_utils.py  turn_budget.py
coding_agent/eval_pipeline/: __init__.py  meta_prompt.md  my_agent.py
coding_agent/scripts/: 01_generate_synthetic.py  02_export_for_review.py  03_import_reviewed.py  08_optimize_eval_prompts.py  09_upload_golden_to_langfuse.py  10_run_langfuse_experiment.py  demo_full_loop.py  run_pipeline.py  test_pms_prompt.py
coding_agent/utils/: AGENTS.md  __init__.py  e2e_session.py  env.py  langfuse_trace_exporter.py  llm_cache.py  profiler.py
config/: settings.dev.env  settings.prod.env  settings.staging.env
core/: __init__.py  action_validator.py  base_agent.py  base_state.py  batch_executor.py  builtin_hooks.py  config.py  context_manager.py  hooks.py  mcp_loader.py  model_tiers.py  parallel_tool_executor.py  project_context.py  reducers.py  resilience.py  subagent_context.py  tool_call_utils.py  tool_permissions.py
core/memory/: __init__.py  schemas.py  search.py  semantic_loader.py  state.py  store.py
core/middleware/: __init__.py  memory.py  message_window.py  skill.py  summarization.py
core/skills/: __init__.py  loader.py  registry.py
core/subagents/: __init__.py  process_manager.py  registry.py  schemas.py  worker.py
data/: AGENTS.md
data/corpus/: 00_coding_conventions.md  00_sla.md  (+1 more)
docker/: .cli_history  .env.langfuse.example  Dockerfile.agent  Dockerfile.cli  Dockerfile.eval  Dockerfile.mcp  docker-compose.harness.yml  docker-compose.langfuse.yaml  docker-compose.mcp.yml  docker-compose.yml  litellm_config.yaml  mcp_docker.ps1  mcp_docker.sh
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  DEEPAGENTS_MAPPING.md  LANGFUSE_GUIDE.md  LANGGRAPH_DIAGRAMS.md  PAPER_IMPLEMENTATIONS.md  REQUIREMENTS_MAPPING.md  USER_GUIDE.md
eval_pipeline/: AGENTS.md  my_agent.py  settings.py
scripts/: 01_generate_synthetic.py  02_export_for_review.py  03_import_reviewed.py  04_build_golden.py  05_run_eval.py  06_batch_eval_langfuse.py  07_run_remediation.py  08_optimize_eval_prompts.py  09_upload_golden_to_langfuse.py  10_run_langfuse_experiment.py  AGENTS.md  debug_generate.py  demo_full_loop.py  health_check.sh  langfuse_demo.py  run_cli_demo.py  run_pipeline.py  setup.sh  setup_langfuse.py  test_cli_verify.py  test_pms_prompt.py
tests/: conftest.py  demo_client.py  demo_interactive.py  run_agent_server.py  run_arxiv_mcp.py  run_code_tools_mcp.py  run_coding_assistant_server.py  run_deep_research_a2a_server.py  run_orchestrator_server.py  run_serper_mcp.py  run_simple_react_server.py  run_tavily_mcp.py  test_a2a_protocol.py  test_abort_controller.py  test_cli.py  test_cli_integration.py  test_coding_assistant.py  test_context_manager.py  test_coordinator.py  test_docker_e2e.py  test_e2e_phase11.py  test_fibonacci.py  test_generate_tool_write.py  test_hooks.py  test_langfuse_demo_trace.py  test_langfuse_observability.py  test_langfuse_trace_exporter.py  test_memory.py  test_memory_extended.py  test_middleware.py  test_model_tiers.py  test_parallel_executor.py  test_performance.py  test_project_context.py  test_project_creator.py  test_resilience.py  test_run_tests.py  test_scenarios.py  test_scenarios_e2e.py  test_skills.py  (+10 more)
utils/: __init__.py  divide.py  file_io.py  llm_cache.py  logging.py  profiler.py  timing.py  token_optimizer.py
(+134 files in other folders)
