[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"youngs75_a2a" = "."
"youngs75_a2a.core" = "core"
"youngs75_a2a.core.memory" = "core/memory"
"youngs75_a2a.core.skills" = "core/skills"
"youngs75_a2a.core.subagents" = "core/subagents"
"youngs75_a2a.agents" = "agents"
"youngs75_a2a.agents.coding_assistant" = "agents/coding_assistant"
"youngs75_a2a.agents.deep_research" = "agents/deep_research"
"youngs75_a2a.agents.deep_research.nodes" = "agents/deep_research/nodes"
"youngs75_a2a.agents.deep_research.subgraphs" = "agents/deep_research/subgraphs"
"youngs75_a2a.agents.orchestrator" = "agents/orchestrator"
"youngs75_a2a.agents.simple_react" = "agents/simple_react"
"youngs75_a2a.a2a" = "a2a_local"
"youngs75_a2a.eval_pipeline" = "eval_pipeline"
"youngs75_a2a.eval_pipeline.llm" = "eval_pipeline/llm"
"youngs75_a2a.eval_pipeline.loop1_dataset" = "eval_pipeline/loop1_dataset"
"youngs75_a2a.eval_pipeline.loop2_evaluation" = "eval_pipeline/loop2_evaluation"
"youngs75_a2a.eval_pipeline.loop3_remediation" = "eval_pipeline/loop3_remediation"
"youngs75_a2a.eval_pipeline.observability" = "eval_pipeline/observability"
"youngs75_a2a.mcp_servers" = "mcp_servers"
"youngs75_a2a.mcp_servers.code_tools" = "mcp_servers/code_tools"
"youngs75_a2a.cli" = "cli"
"youngs75_a2a.utils" = "utils"
"youngs75_a2a.scripts" = "scripts"

[project]
name = "youngs75-coding-ai-agent"
version = "0.1.0"
description = "AI Assistant Coding Agent Harness — MCP 도구 기반 코드 생성/검증/실행 에이전트"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "a2a-sdk>=0.3.25",
    "langchain>=1.2.13",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langfuse>=4.0.6",
    "langgraph>=1.1.4",
    "langgraph-cli>=0.4.19",
    "mcp[cli]>=1.26.0",
    "pydantic-settings>=2.2,<3",
    "python-dotenv>=1.2.2",
    "structlog>=25,<26",
    "tiktoken>=0.9",
    "rich>=14,<15",
    "prompt-toolkit>=3.0,<4",
    "langchain-anthropic>=1.4.0",
    "langchain-litellm>=0.3.0",
    "tavily-python",
    "arxiv",
    "httpx",
]

[project.scripts]
youngs75-agent = "youngs75_a2a.cli.app:run_cli"

[dependency-groups]
dev = [
    "deepeval>=3.8,<4",
    "nest-asyncio>=1.6,<2",
    "pytest>=9,<10",
    "pytest-asyncio>=1.0,<2",
    "pytest-rerunfailures>=14,<17",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
reruns = 2
reruns_delay = 3
