[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"coding_agent" = "."
"coding_agent.core" = "core"
"coding_agent.core.memory" = "core/memory"
"coding_agent.core.skills" = "core/skills"
"coding_agent.core.subagents" = "core/subagents"
"coding_agent.agents" = "agents"
"coding_agent.agents.coding_assistant" = "agents/coding_assistant"
"coding_agent.agents.deep_research" = "agents/deep_research"
"coding_agent.agents.deep_research.nodes" = "agents/deep_research/nodes"
"coding_agent.agents.deep_research.subgraphs" = "agents/deep_research/subgraphs"
"coding_agent.agents.orchestrator" = "agents/orchestrator"
"coding_agent.agents.simple_react" = "agents/simple_react"
"coding_agent.a2a" = "a2a_local"
"coding_agent.eval_pipeline" = "eval_pipeline"
"coding_agent.eval_pipeline.llm" = "eval_pipeline/llm"
"coding_agent.eval_pipeline.loop1_dataset" = "eval_pipeline/loop1_dataset"
"coding_agent.eval_pipeline.loop2_evaluation" = "eval_pipeline/loop2_evaluation"
"coding_agent.eval_pipeline.loop3_remediation" = "eval_pipeline/loop3_remediation"
"coding_agent.eval_pipeline.observability" = "eval_pipeline/observability"
"coding_agent.mcp_servers" = "mcp_servers"
"coding_agent.mcp_servers.code_tools" = "mcp_servers/code_tools"
"coding_agent.cli" = "cli"
"coding_agent.utils" = "utils"
"coding_agent.scripts" = "scripts"

[project]
name = "youngs75-coding-ai-agent"
version = "0.1.0"
description = "AI Assistant Coding Agent Harness — MCP 도구 기반 코드 생성/검증/실행 에이전트"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "a2a-sdk>=0.3.25",
    "langchain>=1.2.13",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langfuse>=4.0.6",
    "langgraph>=1.1.4",
    "langgraph-cli>=0.4.19",
    "mcp[cli]>=1.26.0",
    "pydantic-settings>=2.2,<3",
    "python-dotenv>=1.2.2",
    "structlog>=25,<26",
    "tiktoken>=0.9",
    "rich>=14,<15",
    "prompt-toolkit>=3.0,<4",
    "langchain-anthropic>=1.4.0",
    "langchain-litellm>=0.3.0",
    "tavily-python",
    "arxiv",
    "httpx",
]

[project.scripts]
youngs75-agent = "coding_agent.cli.app:run_cli"

[dependency-groups]
dev = [
    "deepeval>=3.8,<4",
    "nest-asyncio>=1.6,<2",
    "pytest>=9,<10",
    "pytest-asyncio>=1.0,<2",
    "pytest-rerunfailures>=14,<17",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
reruns = 2
reruns_delay = 3
